# ip-geolocation-api

./: .env.example  .gitignore  .safety-project.ini  Dockerfile  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  main.py
app/application/: geolocation_service.py
app/core/: __init__.py  config.py  logging.py
app/domain/: __init__.py  repositories.py  services.py
app/domain/models/: __init__.py  ip_data.py
app/infrastructure/: __init__.py  database.py  ip_geolocation_repository.py  ipstack_geolocation_service.py  models.py
app/interfaces/: __init__.py
app/interfaces/api/: __init__.py
app/interfaces/api/routes/: __init__.py  dependencies.py
app/interfaces/api/routes/v1/: geolocation_router.py
app/middleware/: __init__.py  logging.py
migrations/: env.py
migrations/versions/: 8b1dc7190760_update_datetime_columns.py  ddb76d9a02c0_initial.py
scripts/: init-test-db.sh  populate_test_data.py  seed.py
tests/: README.md  conftest.py
tests/api/: README.md  conftest.py  test_add_geolocation.py  test_add_geolocation_api.py  test_delete_geolocation.py  test_delete_geolocation_api.py  test_get_geolocation.py  test_get_geolocation_api.py  test_health.py  test_health_api.py
tests/integration/: README.md  conftest.py
tests/integration/infrastructure/: conftest.py  test_ip_geolocation_repository_int.py  test_ipstack_geolocation_service.py  test_ipstack_geolocation_service_int.py
tests/unit/: README.md
tests/unit/application/: test_domain_validation_ut.py  test_geolocation_service.py  test_geolocation_service_ut.py
tests/unit/infrastructure/: test_ip_geolocation_repository.py  test_ip_geolocation_repository_ut.py  test_ipstack_geolocation_service.py  test_ipstack_geolocation_service_ut.py
