[tool.poetry]
name = "ip-geolocation-api"
version = "0.1.0"
description = "API for storing and retrieving geolocation data based on IP addresses"
authors = ["Piotr Majda <piotr.majda.92@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
gunicorn = "^21.0.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
alembic = "^1.12.0"
requests = "^2.31.0"
httpx = "^0.25.0"
pydantic = "^2.0.0"
email-validator = "^2.0.0"
prometheus-client = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "app.cli:main"

# Flake8 configuration
[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__ files
    "tests/*:E501"  # Allow long lines in tests
]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
line_length = 100 